--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.6.6",
     "antd": "^4.16.13",
+    "axios": "^0.25.0",
     "moralis": "^0.0.176",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
@@ -16,6 +17,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "uid": "^2.0.0",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
